--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -17,8 +17,8 @@ services:
         desc: "We help you check your credit record, income and expenses to give you an accurate assessment of what you can afford. You will then know how likely you are to qualify for a bond."
         icon: fas fa-tasks       
         link:
-          url: tel:+27795620507
-          text: "Call: 079 562 0507"
+          url: tel:+27633880161
+          text: "Call: 063 388 0161
       - title: "Still Looking for a Home"
         desc: "I'm searching property portals and visiting show houses but have a few questions."
         icon: fas fa-search
@@ -76,20 +76,18 @@ more-calculators:
 
 textblock:
     title: "Why Key Pro Bonds"
-    text: "Home loans ....getting your bond approved."
-    footer: "Our service is completely FREE, with no obligation."
+    text: "What we do."
     section: textblock
     list:
-      - title: "We help you complete one application, which we submit to all the banks."
-        image: "fa-university"
-      - title: "We submit to all the banks, including your own bank, to get quotes."
-        image: "fa-file-invoice-dollar"
-      - title: "You can compare the quotes from each bank."
-        image: "fa-balance-scale"
-      - title: "We negotiate the best interest rates and deal on your behalf."
-        image: "fa-comments-dollar"
-      - title: "We can help you in securing a zero deposit bond if required."
-        image: "fa-user-shield"
+      - title: "We simplify the process by completing one application, submitted to multiple    banks."
+        image: "fa fa-check-square"
+      - title: "We will source quotes from all the major banks, including your own, for easy comparison."
+        image: "fa fa-check-square"
+      - title: "Benefit from our negotiation skills for the best rates and deals on your behalf."
+        image: "fa fa-check-square"
+      - title: "Explore zero deposit bond options with our assistance for added convenience."
+        image: "fa fa-check-square"
+    footer: "Our Bond Origination services are at no cost to you."
 
 textblock-lite:
     title: "GET HOME LOAN QUOTES FROM ALL THE <br> BANKS WITH ONE APPLICATION"
@@ -157,9 +155,9 @@ team:
     people:
       - name: "Carol Musgrove"
         role: "Property Finance Specialist"
-        image: assets/img/team/xxx.jpg
+        image: assets/img/team/300x300.jpg
         social:
-          - url: tel:079 562 0507
+          - url: tel:063 388 0161
             icon: fas fa-phone
           - url: mailto:keyprobonds@outlook.com?subject=evo Key Pro Bonds Website Enquiry
             icon: fas fa-envelope
