--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -153,7 +153,7 @@ clients:
         logo: assets/img/clients/SBSA-bw.png
     
 team:
-    title: "THE TEAM"
+    title: "CONTACT KEY PRO BONDS"
     # text: "Lorem ipsum dolor sit amet consectetur."
     # subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
     section: team
@@ -185,7 +185,7 @@ testimonials:
 
       - name: "Yongama F."
         testimony: "Carol, thank you for getting my bond approved! I really appreciate all the feedback you gave me!"  
-        
+
       - name: "Wouter L."
         testimony: "Thank you, to you guys! You rock!"
 
