--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: ""
 
-title: evo Key Pro Bonds - Experts in Bond Origination & Home Loans | Randburg
-email: keyprobonds@outlook.com
+title: evo Key Pro Bonds - Experts in Bond Origination & Home Loans | Gauteng - Cape Town, South Africa
+email: carol@keyprobonds.co.za
 description: Connect with Carol Musgrove at evo Key Pro Bonds for expert guidance on securing your home loan. Our team of seasoned property specialists specializes in tailored home loans and comprehensive property finance solutions. We bring unparalleled passion to the property industry, dedicated specifically to bonds, home loans, and origination services. Count on our unwavering commitment to delivering excellence and fostering enduring partnerships.
 author: Eben Roux / Pieter Oosthuizen
 
