--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,7 +11,7 @@ services:
         desc: "We submit Home Loan Applications to up to seven banks negotiating the best interest rates and deal in the market at any given time."
         icon: fas fa-home
         link: 
-          url: mailto:keyprobonds@outlook.com ?subject=Mail from evo Key Pro Bonds website
+          url: mailto:carol@keyprobonds.co.za ?subject=Mail from evo Key Pro Bonds website
           text: "Email Us"
       - title: "Pre-qualification"
         desc: "We help you check your credit record, income and expenses to give you an accurate assessment of what you can afford. You will then know how likely you are to qualify for a bond."
@@ -23,7 +23,7 @@ services:
         desc: "I'm searching property portals and visiting show houses but have a few questions."
         icon: fas fa-search
         link: 
-          url: mailto:keyprobonds@outlook.com ?subject=Mail from evo Key Pro Bonds website
+          url: mailto:carol@keyprobonds.co.za ?subject=Mail from evo Key Pro Bonds website
           text: "Email Me"
 
 articles:
@@ -165,7 +165,7 @@ team:
         social:
           - url: tel:079 562 0507
             icon: fas fa-phone
-          - url: mailto:keyprobonds@outlook.com?subject=evo Key Pro Bonds Website Enquiry
+          - url: mailto:carol@keyprobonds.co.za?subject=evo Key Pro Bonds Website Enquiry
             icon: fas fa-envelope
           - url: https://web.facebook.com/byCarolM/
             icon: fab fa-facebook-f
