--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,6 @@ group: evo Homeloans
 
 company: evo Key Pro Bonds
 
-url: https://evohomeloans.co.za/bond-originator/uncategorized/xxx/
+url: https://evohomeloans.co.za/bond-originators/
 
-address: 00 XXX Road, XXX Suburb, Randburg, XXXX
+address: Ruimsig, Krugersdorp, Gauteng
